--- a/bootstrapportfolio.css
+++ b/bootstrapportfolio.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 * {
     margin: 0;
@@ -7,53 +11,107 @@
 
 :root {
     --texthover: #0a58ca;
+    --bootsrapyellow:#FFC107;
 }
  
 body{
-    /* font-family:none !important; */
+    font-family:none !important;
+background-image: linear-gradient(180deg, rgba(13, 13, 13, 0.9), rgba(13, 13, 13, 0.13)),url(./images/yellow-cardboard-papers-corner-blue-backdrop.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position:center;
 }
 
 #Navbar .nav-link a {
-    transition: ease-in-out color(1s);
+    transition: ease-in-out color(0.5s);
 }
 
 
-#Navbar .nav-link li a {
-    transition: 1s;
+#Navbar .nav-link li a,li {
+    transition: 0.5s;
 }
 #Navbar .nav-link li:hover a{
-background-color: red;
+background-color: var(--bootsrapyellow);
 /* color: white !important; */
 padding:10px; 
-color: white !important;
+color: black !important;
 letter-spacing: 1px !important;
 }
 
 
 #Navbar .nav-link a:hover {
-    color: var(--texthover) !important;
+    color: var(--bootsrapyellow) !important;
 }
 
 
 #Hero-Section {
-      background-image:  linear-gradient(180deg, rgba(46, 157, 255, 0.5), rgba(46, 157, 255, 0.22)),
+      /* background-image:  linear-gradient(180deg, rgba(46, 157, 255, 0.5), rgba(46, 157, 255, 0.22)), */
     /* url("https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1a6617b93138_photo-1416359658663-73a3834895eb.jpg"); */
-    ;height: 100vh;
+    height: 100vh;
     background-size: cover;
     background-position: center;
-    background-image: url(./images/layered-paper-cut-background_167650-4645.avif);
+    /* background-image: url(./images/layered-paper-cut-background_167650-4645.avif); */
 }
 #Hero-Section .social-icons a{
     border-radius: 50%;
     height: 8vh;
     width: 8vh;
-    transition: 1s;
+    transition: 0.5s;
     cursor: pointer;
 }
 
 /* #Hero-Section .social-icons .bi{
-    transition: 1s;
+    transition: 0.5s;
 } */
 #Hero-Section .social-icons a:hover{
     color: black !important;
+}
+
+
+
+
+#Projects .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
+    background-color: var(--bootsrapyellow) !important;
+    color: black !important;
+}
+#Projects .nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover{
+    background-color: var(--bootsrapyellow);
+    color: black !important;
+}
+#Projects .tab-content .img-div img{
+    transition: 0.5s;
+    color: black !important;
+}
+#Projects .tab-content .img-div:hover .img-hover-content{
+    display: flex !important;
+    /* opacity: 1; */
+    justify-content: space-evenly;
+    align-items: center;
+}
+#Projects .tab-content .img-hover-content:hover .btn{
+    /* color: black !important; */
+    /* background-color: var(--texthover) !important; */
+
+}
+#Projects .tab-content .img-hover-content:hover{
+    border: none;
+}
+
+#Projects .tab-content .img-div:hover img{
+    opacity:  0.5;
+    
+}
+
+#About-Skills .skill-button{
+    transition: 0.5s;
+}
+#About-Skills .skill-button:hover{
+    background-color: transparent;
+    color: white;
+}
+#About-Skills .owl-theme .owl-dots .owl-dot span{
+    background-color: black;
+}
+#About-Skills .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span{
+    background-color: var(--bootsrapyellow);
 }
