--- a/bootstrapportfolio.css
+++ b/bootstrapportfolio.css
@@ -106,8 +106,8 @@ letter-spacing: 1px !important;
     transition: 0.5s;
 }
 #About-Skills .skill-button:hover{
-    background-color: transparent;
-    color: white;
+    background-color: transparent !important;
+    color: white !important;
 }
 #About-Skills .owl-theme .owl-dots .owl-dot span{
     background-color: black;
