--- a/bootstrapportfolio.css
+++ b/bootstrapportfolio.css
@@ -84,7 +84,6 @@ letter-spacing: 1px !important;
 }
 #Projects .img-div:hover .img-hover-content{
     display: flex !important;
-    opacity: 1;
     justify-content: space-evenly;
     align-items: center;
 }
@@ -97,7 +96,7 @@ letter-spacing: 1px !important;
     border: none;
 }
 
-#Projects .tab-content .img-div:hover img{
+#Projects .img-div:hover img{
     opacity:  0.5;
     
 }
