--- a/bootstrapportfolio.css
+++ b/bootstrapportfolio.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -11,15 +12,15 @@
 
 :root {
     --texthover: #0a58ca;
-    --bootsrapyellow:#FFC107;
+    --bootsrapyellow: #FFC107;
 }
- 
-body{
-    font-family:none !important;
-background-image: linear-gradient(180deg, rgba(13, 13, 13, 0.9), rgba(13, 13, 13, 0.13)),url(./images/two-grey-cardboard-papers-corner-blue-backdrop.jpg);
+
+body {
+    font-family: none !important;
+    background-image: linear-gradient(180deg, rgba(13, 47, 31, 0.9), rgba(13, 13, 13, 3.13));
     background-size: cover;
     background-repeat: no-repeat;
-    background-position:center;
+    background-position: center;
 }
 
 #Navbar .nav-link a {
@@ -27,15 +28,17 @@ background-image: linear-gradient(180deg, rgba(13, 13, 13, 0.9), rgba(13, 13, 13
 }
 
 
-#Navbar .nav-link li a,li {
+#Navbar .nav-link li a,
+li {
     transition: 0.5s;
 }
-#Navbar .nav-link li:hover a{
-background-color: var(--bootsrapyellow);
-/* color: white !important; */
-padding:10px; 
-color: black !important;
-letter-spacing: 1px !important;
+
+#Navbar .nav-link li:hover a {
+    background-color: var(--bootsrapyellow);
+    /* color: white !important; */
+    padding: 10px;
+    color: black !important;
+    letter-spacing: 1px !important;
 }
 
 
@@ -45,14 +48,15 @@ letter-spacing: 1px !important;
 
 
 #Hero-Section {
-      /* background-image:  linear-gradient(180deg, rgba(46, 157, 255, 0.5), rgba(46, 157, 255, 0.22)), */
+    /* background-image:  linear-gradient(180deg, rgba(46, 157, 255, 0.5), rgba(46, 157, 255, 0.22)), */
     /* url("https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1a6617b93138_photo-1416359658663-73a3834895eb.jpg"); */
     height: 100vh;
     background-size: cover;
     background-position: center;
     /* background-image: url(./images/layered-paper-cut-background_167650-4645.avif); */
 }
-#Hero-Section .social-icons a{
+
+#Hero-Section .social-icons a {
     border-radius: 50%;
     height: 8vh;
     width: 8vh;
@@ -63,71 +67,84 @@ letter-spacing: 1px !important;
 /* #Hero-Section .social-icons .bi{
     transition: 0.5s;
 } */
-#Hero-Section .social-icons a:hover{
+#Hero-Section .social-icons a:hover {
     color: black !important;
 }
 
 
 
 
-#Projects .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
+#Projects .nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
     background-color: var(--bootsrapyellow) !important;
     color: black !important;
 }
-#Projects .nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover{
+
+#Projects .nav-tabs .nav-link:focus,
+.nav-tabs .nav-link:hover {
     background-color: var(--bootsrapyellow);
     color: black !important;
 }
-#Projects .tab-content .img-div img{
+
+#Projects .tab-content .img-div img {
     transition: 0.5s;
     color: black !important;
 }
-#Projects .img-div:hover .img-hover-content{
+
+#Projects .img-div:hover .img-hover-content {
     display: flex !important;
     justify-content: space-evenly;
     align-items: center;
 }
-#Projects .tab-content .img-hover-content:hover .btn{
+
+#Projects .tab-content .img-hover-content:hover .btn {
     /* color: black !important; */
     /* background-color: var(--texthover) !important; */
 
 }
-#Projects .tab-content .img-hover-content:hover{
+
+#Projects .tab-content .img-hover-content:hover {
     border: none;
 }
 
-#Projects .img-div:hover img{
-    opacity:  0.5;
+#Projects .img-div:hover img {
+    opacity: 0.5;
     transition: 0.8s;
-    
+
 }
 
-#About-Skills .skill-button{
+#About-Skills .skill-button {
     transition: 0.5s;
 }
-#About-Skills .skill-button button:hover{
-    background-color: transparent ;
-    color: white ;
+
+#About-Skills .skill-button button:hover {
+    background-color: transparent;
+    color: white;
 }
-#About-Skills .owl-theme .owl-dots .owl-dot span{
+
+#About-Skills .owl-theme .owl-dots .owl-dot span {
     background-color: black;
 }
-#About-Skills .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span{
+
+#About-Skills .owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
     background-color: var(--bootsrapyellow);
 }
 
 
-@media only screen and (max-width: 425px) { 
-    #Hero-Section .social-icons a{
+@media only screen and (max-width: 425px) {
+    #Hero-Section .social-icons a {
         border: none !important;
-        
+
     }
-    #Hero-Section .social-icons a:hover{
+
+    #Hero-Section .social-icons a:hover {
         background-color: none !important;
         outline: none !important;
     }
-    #Projects .tab-content .model{
+
+    #Projects .tab-content .model {
         display: none !important;
     }
-    
+
 }
